chart/templates/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-api
spec:
  type: ClusterIP
  selector:
    app: payment-api
  ports:
  - port: 4000
    targetPort: 4000
